--- a/befunge/index.html
+++ b/befunge/index.html
@@ -6,11 +6,11 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <div class="main"></div>
-    <div class="main"></div>
-    <div class="main"></div>
-    <div class="main"></div>
-    <div class="main"></div>
+    <div class="befunge"></div>
+    <div class="befunge"></div>
+    <div class="befunge"></div>
+    <div class="befunge"></div>
+    <div class="befunge"></div>
     <div>
       <a href="https://github.com/arnemart/befungius">Github</a> - <a href="http://quadium.net/funge/spec98.html">Befunge spec</a>
     </div>
