--- a/esox/public/index.html
+++ b/esox/public/index.html
@@ -11,9 +11,12 @@
       integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Comfortaa|Inconsolata|PT+Sans|Raleway&display=swap"
       rel="stylesheet">
+    <!-- <link rel='stylesheet' href='./befunge.css'> -->
     <title>EsoX</title>
   </head>
   <body>
     <div id="root"></div>
   </body>
+  <!-- <script src="./built.js"></script> -->
+  <!-- <script src="./bundle.js"></script> -->
 </html>
