fix piet & befunge - to add tutorial copy past and format

--- a/esox/public/befunge/index.html
+++ b/esox/public/befunge/index.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8" />
     <title>untitled</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./befunge/style.css">
+    <link href="../piet/css/bootstrap.min.css" rel="stylesheet">
+    <!-- optional stylesheet theme included with Bootstrap -->
+    <link href="../piet/css/bootstrap-theme.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/foundation-icons/3.0/foundation-icons.min.css" rel="stylesheet">
+    <link href="../piet/css/piet.css" rel="stylesheet">
   </head>
   <body>
     <div class="befunge"></div>
