--- a/Scholarly HTML/index.html
+++ b/Scholarly HTML/index.html
@@ -746,5 +746,39 @@
             <h3>Idea 3</h3>
             <img alt="QOC Razvan" src="./img/QOC Razvan.jpg">
         </section>
+
+
+            <section id="QOC">
+            	<h2>User Guide</h2>
+            	<h3>Use Case 1</h3>
+
+            	<p>The first use case will present how to navigate through the website and start working on a course.First you will be greeted on the homepage where you can see and sort all the courses available.</p>
+
+	            <img alt="homepage " src="./img/userguide_homepage.png">
+	            <img alt="colors " src="./img/userguide_colors.png">
+	            <img alt="difficulty" src="./img/userguide_difficulty.png">
+
+            	<p>Before selecting a course though you should login. You can do this by clicking the "Login" button on the top right. You have the option to login through Facebook, Google, Git or with a website specific account.</p>  
+
+	            <img alt="login " src="./img/userguide_login.png">
+	            <img alt="progress " src="./img/userguide_progress.png">
+
+
+            	<p>After selecting a course you can opt to participate in it. The page will show you your time spent on the course, the achievements you unlocked and your friends that also participated in this course. By clicking the green "play" button you will be redirected to the lesson page that also includes the coding language interpretor, with examples.</p>
+
+
+            	<img alt="courses" src="./img/userguide_courses.png">
+	            <img alt="piet1 " src="./img/userguide_piet1.png">
+	            <img alt="piet2 " src="./img/userguide_piet2.png">
+
+
+	            <h3>Use Case 2</h3>
+	            
+	            <p>The second use case will present how a client can join a guild. As in case 1 the user will have to login to access the guild features. Upon entering the "Community" tab you will be presented with multiple available guilds on the left side. Each guild's page will show you your friends that are part of it, the guild's achievements and competitions that they took part in or will take part in. To join a guild simply press the blue "+" button under the guilds name.You can quit the guild the same way. You can only be part of a single guild at a time.</p>   
+
+	             <img alt="homepage " src="./img/userguide_homepage.png"> 
+	             <img alt="login " src="./img/userguide_login.png">
+	             <img alt="guild " src="./img/userguide_community.png">
+	        </section>
     </body>
 </html>
